# midibox

./: .gitignore  Cargo.toml  MIT-LICENSE.txt  README.md  build.rs  notes.md
examples/arp/: main.rs
examples/chord/: main.rs
examples/client/: main.rs
examples/delta/: main.rs
examples/drum/: main.rs
examples/drumlogue/: main.rs
examples/drums/: main.rs
examples/phase/: main.rs
examples/plane/: main.rs
examples/polyrhythm/: main.rs
examples/rain/: main.rs
examples/random/: main.rs
examples/slow/: main.rs
examples/tapeloop/: main.rs
proto/: midibox.proto
src/: arp.rs  chord.rs  composite.rs  dropout.rs  drumlogue.rs  lib.rs  main.rs  map.rs  meter.rs  midi.rs  player.rs  rand.rs  router.rs  scale.rs  sequences.rs  server.rs  tone.rs
