[package]
name = "midibox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.8.0"
ctrlc = "3.2.3"
crossbeam = "0.8.2"
log = "0.4.17"
env_logger = "0.10.0"

# rodio = "0.16.0"
# serde = "1.0"
