[package]
name = "midibox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="server"
path= "src/server.rs"


[dependencies]
midir = { version = "0.8.0", features = ["coremidi_send_timestamped"] }
ctrlc = "3.2.3"
crossbeam = "0.8.2"
log = "0.4.17"
env_logger = "0.10.0"
rand = "0.8.5"
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-reflection = "0.9.2"
eframe = "0.22.0"

# rodio = "0.16.0"
# serde = "1.0"

[build-dependencies]
tonic-build = "0.9.2"



